--- a/WebApp/server/package.json
+++ b/WebApp/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@influxdata/influxdb-client": "^1.35.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "mysql2": "^3.11.5",
