--- a/WebApp/server/package.json
+++ b/WebApp/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@influxdata/influxdb-client": "^1.35.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "mysql2": "^3.11.5",
     "nodemon": "^3.1.7",
