--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,16 +4,47 @@ services:
     container_name: influxdb
     environment:
       - DOCKER_INFLUXDB_INIT_MODE=setup
-      - DOCKER_INFLUXDB_INIT_BUCKET = BUCKET_NAME          # The name of your bucket
-      - DOCKER_INFLUXDB_INIT_ORG = ORG_NAME              # The name of your organization
-      - DOCKER_INFLUXDB_INIT_USERNAME= my-user 
-      - DOCKER_INFLUXDB_INIT_PASSWORD= my-password 
-      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN = 3mH2JVxF3-eyZA_giUzWRj0oz0CcGhhgn7mCjiuW5TiIO31E0x-PGufYp9MyTcSzALEDiDgJbjjLaspGJcU-Aw== # Admin token
-      - DOCKER_INFLUXDB_INIT_USER_TOKEN = 3mH2JVxF3-eyZA_giUzWRj0oz0CcGhhgn7mCjiuW5TiIO31E0x-PGufYp9MyTcSzALEDiDgJbjjLaspGJcU-Aw==  # Non-admin user token  
+      - DOCKER_INFLUXDB_INIT_BUCKET=BUCKET_NAME         # The name of your bucket
+      - DOCKER_INFLUXDB_INIT_ORG=ORG_NAME         # The name of your organization
+      - DOCKER_INFLUXDB_INIT_USERNAME=my-user
+      - DOCKER_INFLUXDB_INIT_PASSWORD=my-password
+      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=admin-token # Admin token
+      - DOCKER_INFLUXDB_INIT_USER_TOKEN=user-token  # Non-admin user token  
     ports:
       - "8086:8086"  # InfluxDB HTTP API port
+    networks:
+      - app-network
 
+  python-app:
+    build:
+      context: ./machine_metrics
+      dockerfile: Dockerfile
+    container_name: python-app
+    restart: always
+    environment:
+    - URL=http://localhost:8086
+    - ORG_NAME=ORG_NAME
+    - BUCKET_NAME=BUCKET_NAME
+    - API_TOKEN=api-token
+    networks:
+      - app-network
 
-  server-mock-container :
-    image: server-mock-image
-    container_name: server-mock-container
+  server:
+    build:
+      context: ./WebApp/server
+      dockerfile: Dockerfile
+    container_name: server
+    environment:
+      - MYURL=http://localhost:8086
+      - ORG=ORG_NAME
+      - BUCKET=BUCKET_NAME
+      - MYTOKEN=api-token
+    restart: always
+    ports:
+      - "3001:3001"
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
