--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -7,13 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "tailwind-variants": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
